...
            android:paddingBottom="@dimen/feed_view_padding_vertical"
            android:fillViewport="true"
            android:clipToPadding="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <GridView
                android:id="@+id/main_feed_gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:numColumns="2"
                android:nestedScrollingEnabled="true"
                android:fastScrollEnabled="true"
...
